After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679762 - Some missing annotations for GRegex and a function in gconvert.c
Some missing annotations for GRegex and a function in gconvert.c
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-07-11 17:17 UTC by Krzesimir Nowak
Modified: 2012-07-12 14:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Adds some annotations in GLib. (2.81 KB, patch)
2012-07-11 17:17 UTC, Krzesimir Nowak
accepted-commit_now Details | Review

Description Krzesimir Nowak 2012-07-11 17:17:34 UTC
Created attachment 218574 [details] [review]
Adds some annotations in GLib.

SSIA. I attached a patch fixing them.
Comment 1 Emmanuele Bassi (:ebassi) 2012-07-12 13:47:47 UTC
Review of attachment 218574 [details] [review]:

look okay; the existing (allow-none) is pointless, though - see bug 660879
Comment 2 Krzesimir Nowak 2012-07-12 14:05:11 UTC
Ok, I'll remove allow-none and then push it.
Comment 3 Krzesimir Nowak 2012-07-12 14:14:38 UTC
Pushed to master, thanks for review.