GRegex, GConvert: Add some missing annotations.

Also, removed pointless (allow-none) return annotation.

https://bugzilla.gnome.org/show_bug.cgi?id=679762